--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     <p>Copyright © Your Website 2021</p>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
-                    <p>Distributed By <a href="" class="text-warning">Themewagon</a></p>
+                    <p>Distributed By <a href="" class="text-warning">Ahmed Ezzat</a></p>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6">
                     <p>
